[project]
name = "national-science-day"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "chromadb>=0.6.3",
    "diffusers>=0.32.2",
    "duckduckgo-search>=7.5.0",
    "gradio>=5.19.0",
    "gradio-tools>=0.0.9",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.3.1",
    "pypdf>=5.3.0",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "wikipedia>=1.4.0",
]
